@@ -6,6 +6,8 @@ science-conversion-four=Science Conversion Tier 4
 science-conversion-five=Science Conversion Tier 5
 science-conversion-six=Science Conversion Tier 6
 science-conversion-seven=Science Conversion Tier 7
+science-conversion-eight=Science Conversion Tier 8
+science-conversion-nine=Science Conversion Tier 9
 
 [technology-description]
 science-conversion-one=Acquire the ability to interchange red and green science
@@ -15,6 +17,8 @@ science-conversion-four=Acquire the ability to interchange purple and yellow sci
 science-conversion-five=Acquire the ability to interchange white and orange science
 science-conversion-six=Acquire the ability to interchange white and pink science
 science-conversion-seven=Acquire the ability to interchange white and lime science
+science-conversion-eight=Acquire the ability to interchange white and dark blue science
+science-conversion-nine=Acquire the ability to interchange dark blue and white science
 
 [recipe-name]
 green-to-red=Convert green science into red science
@@ -31,3 +35,7 @@ white-to-pink=Convert white science into pink science
 pink-to-white=Convert pink science into white science
 white-to-lime=Convert white science into lime science
 lime-to-white=Convert lime science into white science
+dark-blue-to-white=Convert dark blue science into white science
+white-to-dark-blue=Convert white science into dark blue science
+white-to-black=Convert white science into black science
+black-to-white=Convert black science into white science
