@@ -14,6 +14,7 @@ amazing, and what it is today!
 Version: 2.0
 Date: 07/05/2025
     Info: Updated to 2.0.58 "Space Age"
+    - added the ability to convert space science into all new science packs compatable wiht space age.
 --------------------------------------------------------------------------
 Version: 1.1.0
 Date: 5/20/2022
